--- a/Jour08/job05/mon_projet-vercel-via-tailwind/package.json
+++ b/Jour08/job05/mon_projet-vercel-via-tailwind/package.json
@@ -4,6 +4,8 @@
   "description": "reproduction l'apparence du site Vercel en utilisant tailwind css",
   "main": "index.js",
   "scripts": {
+    "build-css": "tailwindcss -i ./styles/input.css -o ./styles/output.css --watch",
+    "watch-css": "tailwindcss -i ./styles/input.css -o ./styles/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
